tests/snapshots/lexer__extended_identifiers__leading_digit.snap
---
source: tests/lexer.rs
expression: "lex(\"@123-foo\")"
---
Ok(
    [
        Token {
            kind: ExtendedIdentifier(
                "123-foo",
            ),
            span: Span {
                start: 0,
                end: 8,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 8,
                end: 8,
            },
        },
    ],
)
