tests/snapshots/lexer__extended_identifiers__no_hyphen.snap
---
source: tests/lexer.rs
expression: "lex(\"@foo\")"
---
Ok(
    [
        Token {
            kind: ExtendedIdentifier(
                "foo",
            ),
            span: Span {
                start: 0,
                end: 4,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 4,
                end: 4,
            },
        },
    ],
)
